// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Phase 5B RBAC Permission Integrity should snapshot the admin permissions 1`] = `
[
  "organization.view_legacy",
  "organization.update_legacy",
  "organization.settings_legacy",
  "organization.members_legacy",
  "organization.invitations_legacy",
  "roles.manage_legacy",
  "permissions.view_legacy",
  "users.view_legacy",
  "users.create_legacy",
  "users.update_legacy",
  "users.delete_legacy",
  "billing.manage_legacy",
  "inventory.manage_legacy",
  "workspace.switch_legacy",
  "customers.create_legacy",
  "customers.update_legacy",
  "customers.view_legacy",
  "vendors.create_legacy",
  "vendors.update_legacy",
  "vendors.view_legacy",
  "products.manage_legacy",
  "invoices.create_legacy",
  "invoices.update_legacy",
  "invoices.delete_legacy",
  "invoices.view_legacy",
  "payments.create_legacy",
  "payments.view_legacy",
  "expenses.manage_legacy",
  "taxes.manage_legacy",
  "transactions.view_legacy",
  "reports.view_legacy",
  "organization.view",
  "organization.update",
  "organization.settings",
  "member.view",
  "member.invite",
  "member.update",
  "member.remove",
  "audit.read",
  "roles.view",
  "inventory.view",
  "inventory.create",
  "inventory.update",
  "inventory.delete",
  "products.view",
  "products.create",
  "products.update",
  "products.delete",
  "sales.view",
  "sales.create",
  "sales.update",
  "sales.delete",
  "purchasing.view",
  "purchasing.create",
  "purchasing.update",
  "purchasing.delete",
  "finance.view",
  "finance.create",
  "finance.update",
  "finance.delete",
  "reports.view",
  "reports.export",
  "customers.view",
  "customers.create",
  "customers.update",
  "customers.delete",
  "vendors.view",
  "vendors.create",
  "vendors.update",
  "vendors.delete",
]
`;

exports[`Phase 5B RBAC Permission Integrity should snapshot the manager permissions 1`] = `
[
  "organization.view_legacy",
  "organization.members_legacy",
  "organization.invitations_legacy",
  "permissions.view_legacy",
  "users.view_legacy",
  "users.create_legacy",
  "users.update_legacy",
  "inventory.manage_legacy",
  "workspace.switch_legacy",
  "customers.create_legacy",
  "customers.update_legacy",
  "customers.view_legacy",
  "vendors.create_legacy",
  "vendors.update_legacy",
  "vendors.view_legacy",
  "products.manage_legacy",
  "invoices.create_legacy",
  "invoices.update_legacy",
  "invoices.view_legacy",
  "payments.create_legacy",
  "payments.view_legacy",
  "expenses.manage_legacy",
  "taxes.manage_legacy",
  "transactions.view_legacy",
  "reports.view_legacy",
  "organization.view",
  "member.view",
  "member.invite",
  "roles.view",
  "inventory.view",
  "inventory.create",
  "inventory.update",
  "products.view",
  "products.create",
  "products.update",
  "sales.view",
  "sales.create",
  "sales.update",
  "purchasing.view",
  "purchasing.create",
  "purchasing.update",
  "finance.view",
  "finance.create",
  "finance.update",
  "reports.view",
  "reports.export",
  "customers.view",
  "customers.create",
  "customers.update",
  "vendors.view",
  "vendors.create",
  "vendors.update",
]
`;

exports[`Phase 5B RBAC Permission Integrity should snapshot the member permissions 1`] = `
[
  "organization.view_legacy",
  "permissions.view_legacy",
  "users.view_legacy",
  "workspace.switch_legacy",
  "customers.view_legacy",
  "vendors.view_legacy",
  "invoices.view_legacy",
  "payments.view_legacy",
  "transactions.view_legacy",
  "reports.view_legacy",
  "organization.view",
  "member.view",
  "roles.view",
  "inventory.view",
  "products.view",
  "sales.view",
  "purchasing.view",
  "finance.view",
  "reports.view",
  "customers.view",
  "vendors.view",
]
`;

exports[`Phase 5B RBAC Permission Integrity should snapshot the owner permissions and retain all expected granular capabilities 1`] = `
[
  "organization.view_legacy",
  "organization.update_legacy",
  "organization.delete_legacy",
  "organization.settings_legacy",
  "organization.members_legacy",
  "organization.invitations_legacy",
  "organization.transfer_ownership_legacy",
  "roles.manage_legacy",
  "permissions.view_legacy",
  "users.view_legacy",
  "users.create_legacy",
  "users.update_legacy",
  "users.delete_legacy",
  "billing.manage_legacy",
  "inventory.manage_legacy",
  "workspace.switch_legacy",
  "customers.create_legacy",
  "customers.update_legacy",
  "customers.view_legacy",
  "vendors.create_legacy",
  "vendors.update_legacy",
  "vendors.view_legacy",
  "products.manage_legacy",
  "invoices.create_legacy",
  "invoices.update_legacy",
  "invoices.delete_legacy",
  "invoices.view_legacy",
  "payments.create_legacy",
  "payments.view_legacy",
  "expenses.manage_legacy",
  "taxes.manage_legacy",
  "transactions.view_legacy",
  "reports.view_legacy",
  "auditlogs.view_legacy",
  "organization.view",
  "organization.update",
  "organization.delete",
  "organization.settings",
  "member.view",
  "member.invite",
  "member.update",
  "member.remove",
  "audit.read",
  "roles.view",
  "roles.create",
  "roles.update",
  "roles.delete",
  "ownership.transfer",
  "inventory.view",
  "inventory.create",
  "inventory.update",
  "inventory.delete",
  "products.view",
  "products.create",
  "products.update",
  "products.delete",
  "customers.view",
  "customers.create",
  "customers.update",
  "customers.delete",
  "vendors.view",
  "vendors.create",
  "vendors.update",
  "vendors.delete",
  "sales.view",
  "sales.create",
  "sales.update",
  "sales.delete",
  "purchasing.view",
  "purchasing.create",
  "purchasing.update",
  "purchasing.delete",
  "finance.view",
  "finance.create",
  "finance.update",
  "finance.delete",
  "reports.view",
  "reports.export",
]
`;
